# gnu_tetrahedrosaur

./: CMakeLists.txt  README
CMakeModules/: FindGLEW.cmake  GenerateShader.cmake  GenerateShaders.cmake
lib/algo/: CMakeLists.txt
lib/algo/include/algo/: Alignment.hpp  Probability.hpp  distance.hpp  pairing.hpp  pairing_pair.hpp  random_generators.hpp
lib/algo/src/: Alignment.cpp  Alignment.hpp  CMakeLists.txt  Probability.cpp  Probability.hpp  distance.hpp  pairing.hpp  pairing_pair.hpp  random_generators.cpp  random_generators.hpp  roommates.cpp  roommates.hpp
lib/algo/test/: CMakeLists.txt  test_Alignment.cpp  test_distance.cpp  test_libalgo.cpp  test_pairing.cpp  test_roommates.cpp
lib/bio/: CMakeLists.txt
lib/bio/include/bio/: Cell.hpp  Concentration.hpp  Config.hpp  Genome.hpp  InstructionSet.hpp  MutationParams.hpp  Organism.hpp  OrganismDesc.hpp  Origin.hpp  mating.hpp
lib/bio/src/: AverageGeneParams.cpp  AverageGeneParams.hpp  CMakeLists.txt  Cell.cpp  Cell.hpp  Chromosome.cpp  Chromosome.hpp  Config.cpp  Config.hpp  Gene.cpp  Gene.hpp  GeneInitializer.cpp  GeneInitializer.hpp  Genome.cpp  Genome.hpp  InitialConditions.cpp  InitialConditions.hpp  InstructionSet.cpp  InstructionSet.hpp  MutationParams.cpp  MutationParams.hpp  Organism.cpp  Organism.hpp  OrganismDesc.cpp  OrganismDesc.hpp  RangeCondition.hpp  TetrahedronsMap.cpp  TetrahedronsMap.hpp  crossingover.hpp  mating.cpp  mating.hpp
lib/bio/test/: CMakeLists.txt  test_AverageGeneParams.cpp  test_InstructionSet.cpp  test_crossingover.cpp  test_libbio.cpp  test_mating.cpp
lib/datatypes/: CMakeLists.txt
lib/datatypes/include/datatypes/: biology.hpp  mesh.hpp  numeric.hpp
lib/datatypes/src/: CMakeLists.txt  biology.hpp  geometry.cpp  geometry.hpp  mesh.cpp  mesh.hpp  numeric.hpp  strongtype.hpp
lib/mesh/: CMakeLists.txt
lib/mesh/include/mesh/: BuddingParams.hpp  ColorWrappedLists.hpp  Connections.hpp  Edge.hpp  Figure.hpp  GLMesh.hpp  MemoryModification.hpp  Mesh.hpp  Tetrahedron.hpp  Triangle.hpp  TrianglesMap.hpp  Vertex.hpp
lib/mesh/src/: BuddingHelper.cpp  BuddingHelper.hpp  BuddingParams.cpp  BuddingParams.hpp  CMakeLists.txt  ColorWrappedLists.cpp  ColorWrappedLists.hpp  Connections.cpp  Connections.hpp  Edge.cpp  Edge.hpp  Figure.cpp  Figure.hpp  GLMesh.cpp  GLMesh.hpp  MemoryModification.cpp  MemoryModification.hpp  Mesh.cpp  Mesh.hpp  SelectionHelper.cpp  SelectionHelper.hpp  StructureModification.cpp  StructureModification.hpp  Tetrahedron.cpp  Tetrahedron.hpp  Triangle.cpp  Triangle.hpp  TrianglesMap.cpp  TrianglesMap.hpp  Vertex.cpp  Vertex.hpp
lib/mesh/test/: CMakeLists.txt  test_BuddingHelper.cpp  test_ColorWrappedLists.cpp  test_Connections.cpp  test_MemoryModification.cpp  test_Mesh.cpp  test_Triangle.cpp  test_TrianglesMap.cpp  test_libmesh.cpp
lib/shader/: CMakeLists.txt
lib/shader/include/shader/: Collection.hpp  descriptors.hpp
lib/shader/src/: CMakeLists.txt  Collection.cpp  Collection.hpp  descriptors.cpp  descriptors.hpp
lib/shader/src/glsl/: feedback.glslv  interior.glslg  interior.glslv  main.glslv  normal.glslg  normal.glslv  picking.glslf  picking.glslv  point.glslv  tool.glslv
lib/utils3d/: CMakeLists.txt
lib/utils3d/include/utils3d/: geometry.hpp  projection.hpp
lib/utils3d/src/: CMakeLists.txt  geometry.cpp  geometry.hpp  projection.cpp  projection.hpp
lib/utils3d/test/: CMakeLists.txt  test_geometry.cpp  test_libutils3d.cpp
res/: resources.qrc
src/: Application.cpp  Application.hpp  Arcball.cpp  Arcball.hpp  CMakeLists.txt  CellModel.cpp  CellModel.hpp  ChromosomeDiffModel.cpp  ChromosomeDiffModel.hpp  DevelopmentEngine.cpp  DevelopmentEngine.hpp  EdgeModel.cpp  EdgeModel.hpp  Figure3D.cpp  Figure3D.hpp  FigureViewport.cpp  FigureViewport.hpp  GeneModel.cpp  GeneModel.hpp  GenomeModel.cpp  GenomeModel.hpp  GenomeTab.cpp  GenomeTab.hpp  GenomeView.cpp  GenomeView.hpp  GuiOrganismDesc.cpp  GuiOrganismDesc.hpp  MainWindow.cpp  MainWindow.hpp  MainWindowMenuBar.cpp  MainWindowMenuBar.hpp  MainWindowTab.cpp  MainWindowTab.hpp  MatingWidget.cpp  MatingWidget.hpp  MutationParamsDialog.cpp  MutationParamsDialog.hpp  NewProjectDialog.cpp  NewProjectDialog.hpp  OffspringModel.cpp  (+43 more)
